[gd_scene load_steps=11 format=3 uid="uid://cdje7bw13q1rf"]

[ext_resource type="Script" uid="uid://csp5i8855rgrr" path="res://booter/booter.gd" id="1_luyak"]
[ext_resource type="Texture2D" uid="uid://b58qhtpbhd5ou" path="res://booter/fort.png" id="2_vkclu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vkclu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yrrqs"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_yrrqs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect3/Label:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vkclu"]
resource_name = "show_open"
length = 4.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.9801, 3, 4.5),
"transitions": PackedFloat32Array(1, 2.82843, 0.307786, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(4.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_check_res"
}]
}

[sub_resource type="Animation" id="Animation_3inkv"]
resource_name = "to_main"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.466667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"goto_main"
}]
}

[sub_resource type="Animation" id="Animation_ul426"]
resource_name = "to_updating"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_update"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect3/Label:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b2s2o"]
resource_name = "update_to_main"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.79),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"goto_main"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ul426"]
_data = {
&"RESET": SubResource("Animation_yrrqs"),
&"show_open": SubResource("Animation_vkclu"),
&"to_main": SubResource("Animation_3inkv"),
&"to_updating": SubResource("Animation_ul426"),
&"update_to_main": SubResource("Animation_b2s2o")
}

[node name="Booter" type="Node2D"]
script = ExtResource("1_luyak")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ColorRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vkclu")

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer/ColorRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -11.5
offset_right = 24.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "更新中"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/ColorRect3/Label"]
custom_minimum_size = Vector2(173, 10)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -123.0
offset_top = 1.0
offset_right = 121.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_vkclu")
theme_override_styles/fill = SubResource("StyleBoxFlat_yrrqs")
show_percentage = false

[node name="Label" type="Label" parent="CanvasLayer/ColorRect3/Label/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.368627, 0.376471, 0.352941, 1)
horizontal_alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/ColorRect3/Label/ProgressBar"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 3.0
offset_right = 67.0
offset_bottom = 26.0
grow_vertical = 0

[node name="Label3" type="Label" parent="CanvasLayer/ColorRect3/Label/ProgressBar"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -117.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = 26.0
grow_horizontal = 0
grow_vertical = 0
horizontal_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
&"": SubResource("AnimationLibrary_ul426")
}
autoplay = "show_open"

[node name="Msg" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.756863, 0.756863, 0.768627, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="UpdateBoot" type="Button" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -15.5
offset_right = 44.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "需要更新启动器，点击更新"
flat = true

[node name="DownCheck" type="Timer" parent="CanvasLayer"]
wait_time = 0.1

[node name="version" type="Label" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -45.0
offset_right = 320.0
offset_bottom = -22.0
grow_vertical = 0
theme_override_font_sizes/font_size = 16

[connection signal="pressed" from="CanvasLayer/UpdateBoot" to="." method="_on_update_boot_pressed"]
[connection signal="timeout" from="CanvasLayer/DownCheck" to="." method="_on_down_check_timeout"]
